<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.watch_your_car.client.GStreamerSurfaceView
        android:id="@+id/surface_video"
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1.00"
        android:configChanges="orientation|keyboardHidden" />
    
    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/zwartevilt" >
		
        <ImageButton
            android:id="@+id/backwardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/backward"
            android:onClick="driveBackward"
            android:src="@drawable/down"
            android:background="@null" />

        <ImageButton
            android:id="@+id/stopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/backwardButton"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/stop"
            android:longClickable="true"
            android:src="@drawable/stop_button"
            android:text="@string/stop"
            android:background="@null" />

        <ImageButton
            android:id="@+id/forwardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/stopButton"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/forward"
            android:onClick="driveForward"
            android:src="@drawable/up"
            android:background="@null" />

        <ImageButton
            android:id="@+id/driftBackRightButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/backwardButton"
            android:contentDescription="@string/driftBackRight"
            android:onClick="driftBackRight"
            android:src="@drawable/downright"
            android:text="@string/driftBackRight"
            android:background="@null" />

        <ImageButton
            android:id="@+id/driftBackLeftButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@id/backwardButton"
            android:contentDescription="@string/driftBackLeft"
            android:onClick="driftBackLeft"
            android:src="@drawable/downleft"
            android:text="@string/driftBackLeft"
            android:background="@null" />

        <ImageButton
            android:id="@+id/rightButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/driftBackRightButton"
            android:layout_toRightOf="@id/stopButton"
            android:contentDescription="@string/right"
            android:onClick="rotateRight"
            android:src="@drawable/right"
            android:text="@string/right"
            android:background="@null" />

        <ImageButton
            android:id="@+id/driftLeftButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/leftButton"
            android:layout_alignLeft="@+id/leftButton"
            android:contentDescription="@string/driftLeft"
            android:onClick="turnLeft"
            android:src="@drawable/upleft"
            android:text="@string/driftLeft"
            android:background="@null" />



        <ImageButton
            android:id="@+id/leftButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/driftBackLeftButton"
            android:layout_toLeftOf="@id/stopButton"
            android:contentDescription="@string/left"
            android:onClick="rotateLeft"
            android:src="@drawable/left"
            android:text="@string/left"
            android:background="@null" />

        <ImageButton
            android:id="@+id/driftRightButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/rightButton"
            android:layout_alignLeft="@+id/rightButton"
            android:contentDescription="@string/driftRight"
            android:onClick="turnRight"
            android:src="@drawable/upright"
            android:text="@string/driftRight"
            android:background="@null" />
        
        <ImageButton android:id="@+id/changeHandButton"
		    android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/forwardButton"
            android:layout_centerHorizontal="true"
            android:text="@string/change_hand"
            android:contentDescription="@string/change_hand"
            android:src="@drawable/orientation"
            android:layout_marginBottom="20dip"
            android:onClick="changeLayout"
            android:background="@null"/>

    </RelativeLayout>
   
</LinearLayout>